--- a/javascript/styles/style.scss
+++ b/javascript/styles/style.scss
@@ -60,6 +60,7 @@ button {
                     transform-origin: center;
                     stroke: #ff4564;
                     stroke-width: 45;
+                    stroke-dasharray: 0 145;
                 }
             }
         }
